[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Main Character/characterAiming_0.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://scripts/bulletSpawnpoint.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 16.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 30 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 184, 251 )
collision_layer = 5
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )
disabled = true

[node name="bulletSpawnpoint" type="Node2D" parent="."]
position = Vector2( 26, -9 )
script = ExtResource( 3 )

[node name="fireRate" type="Timer" parent="."]
wait_time = 0.1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 6, 3 )
shape = SubResource( 2 )

[connection signal="firePoint" from="bulletSpawnpoint" to="." method="_on_bulletSpawnpoint_firePoint"]
[connection signal="timeout" from="fireRate" to="." method="_on_fireRate_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
